# Single-Boiler-Espresso-Machine

./: README.md
Notes/FastHeatUp/: FastHeatUp.txt  FastHeatUp01.csv  FastHeatUp01.json
Notes/SteamingMilk/: SteamingMilk.txt  SteamingMilk01.csv  SteamingMilk01.json
Notes/TempDuringPreparationAndBrew/: TempDuringPreparationAndBrew.txt  TempDuringPreparationAndBrew01.json  TempDuringPrepartationAndBrew01.csv
PCB/: BOM_PCB_General Espresso Machine Board (VBM)_2022-01-31.csv  PickAndPlace_PCB_General Espresso Machine Board (VBM)_2022-01-31.csv
VBM/VBM/: VBM.ino  button.cpp  button.hpp  buttonBrew.cpp  buttonBrew.hpp  clock.cpp  clock.hpp  communicator.cpp  communicator.hpp  eepromMemory.hpp  heater.cpp  heater.hpp  led.cpp  led.hpp  settings.cpp  settings.hpp  vbm.cpp  vbm.hpp
VBM/test_led/: led.hpp  test_led.ino
VBM/tests/: CMakeLists.txt
